fix the width of enter email box on mobile browser

--- a/app/assets/stylesheets/styles/_home.scss
+++ b/app/assets/stylesheets/styles/_home.scss
@@ -235,7 +235,7 @@ html, body {
         padding-top: 5px;
     }
     #purpose {
-        margin-right: 20px;
+        margin-right: 10px;
     }
 }
 @media only screen and (max-width: 500px){
@@ -255,7 +255,7 @@ html, body {
     }
     #calendar {
         padding-left: 20px;
-        padding-right: 60px;
+        padding-right: 20px;
     }
     .topic_link {
         font-size: 15px;
@@ -276,12 +276,12 @@ html, body {
     }
     .col-md-5 p {
         padding-left: 40px;
-        padding-right: 20px;
+        padding-right: 10px;
     }
     .col-md-8 {
         padding-left: 40px;
     }
     .enter_email {
-        width: 70px;
+        width: 120px;
     }
 }
