--- a/app/assets/stylesheets/styles/_panels.scss
+++ b/app/assets/stylesheets/styles/_panels.scss
@@ -36,7 +36,7 @@
 }
 @media only screen and (max-width: 500px){
   .enter_email {
-    width: 70px;
+    width: 120px;
   }
 }
 #social-button {
